--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <div class="wrapper">
+        <header class="header">
 
+        </header>
+        <main class="main">
+
+        </main>
+        <footer class="footer">
+
+        </footer>
+    </div>
+
+
+    <script src="js/script.js"></script>
 </body>
 
 </html>
