--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
         </header>
         <main class="main">
-
+            <!-- <input class="input-num-movie" type="number" name="nummovie" id="" placeholder="Введите кол-во фильмов">
+            <input class="input-movie" type="text" name="movie" id="" placeholder="Введит фильм">
+            <input class="input-rating" type="number" name="rating" id="" placeholder="Введите рейтинг"> -->
         </main>
         <footer class="footer">
 
