--- a/index.html
+++ b/index.html
@@ -14,9 +14,23 @@
 
         </header>
         <main class="main">
-            <!-- <input class="input-num-movie" type="number" name="nummovie" id="" placeholder="Введите кол-во фильмов">
-            <input class="input-movie" type="text" name="movie" id="" placeholder="Введит фильм">
-            <input class="input-rating" type="number" name="rating" id="" placeholder="Введите рейтинг"> -->
+            <div class="box" id="box"></div>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+
+            <div class="wrapperx">
+                <div class="heart"></div>
+                <div class="heart"></div>
+                <div class="heart"></div>
+
+            </div>
         </main>
         <footer class="footer">
 
@@ -24,7 +38,7 @@
     </div>
 
 
-    <script src="js/script.js"></script>
+    <script src="js/dom.js"></script>
 </body>
 
 </html>
