--- a/index.html
+++ b/index.html
@@ -9,36 +9,37 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <!-- <div class="wrapper-x">
         <header class="header">
 
-        </header>
-        <main class="main">
-            <div class="box" id="box"></div>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-
-            <div class="wrapperx">
-                <div class="heart"></div>
-                <div class="heart"></div>
-                <div class="heart"></div>
-
+        </header> -->
+    <main class="main">
+        <div class="wrapper">
+            <div class="first">
+                <button></button>
+                <button id="current"></button>
+                <button></button>
             </div>
-        </main>
-        <footer class="footer">
+            <div class="second">
+                <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li data-current="3">3</li>
+
+                    <li>4</li>
+                    <li>5</li>
+                </ul>
+            </div>
+            <div class="third"></div>
+        </div>
+    </main>
+    <!-- <footer class="footer">
 
         </footer>
-    </div>
+    </div> -->
 
 
-    <script src="js/dom.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
