--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <script defer src="js/script.js"></script>
     <!-- <div class="wrapper-x">
         <header class="header">
 
@@ -17,7 +18,7 @@
         <div class="wrapper">
             <div class="first">
                 <button></button>
-                <button id="current"></button>
+                <button id="current">Touch me</button>
                 <button></button>
             </div>
             <div class="second">
@@ -39,7 +40,7 @@
     </div> -->
 
 
-    <script src="js/script.js"></script>
+
 </body>
 
 </html>
