--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <main class="main">
         <div class="wrapper">
             <div class="first">
-                <button></button>
-                <button id="current">Touch me</button>
-                <button></button>
+                <button class="plus red">Touch me</button>
+                <button>Touch me</button>
+                <button>Touch me</button>
             </div>
             <div class="second">
                 <ul>
