--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
             <div class="third"></div>
         </div>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
 
-        </footer>
-    </div> -->
+        <button class="btn">Animation</button>
+        <div class="wrapper">
+            <div class="box"></div>
+        </div>
+    </footer>
+    <!-- </div> -->
 
 
 
