--- a/index.html
+++ b/index.html
@@ -1,50 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Calc</title>
+    <style>
+        label {
+            display: block;
+            font-size: 30px;
+        }
+
+        input {
+            width: 300px;
+            height: 50px;
+            font-size: 30px;
+        }
+    </style>
 </head>
 
 <body>
-    <script defer src="js/script.js"></script>
-    <!-- <div class="wrapper-x">
-        <header class="header">
-
-        </header> -->
-    <main class="main">
-        <div class="wrapper">
-            <div class="first">
-                <button class="plus red">Touch me</button>
-                <button>Touch me</button>
-                <button>Touch me</button>
-            </div>
-            <div class="second">
-                <ul>
-                    <li>1</li>
-                    <li>2</li>
-                    <li data-current="3">3</li>
-
-                    <li>4</li>
-                    <li>5</li>
-                </ul>
-            </div>
-            <div class="third"></div>
-        </div>
-    </main>
-    <footer class="footer">
-
-        <button class="btn">Animation</button>
-        <div class="wrapper">
-            <div class="box"></div>
-        </div>
-    </footer>
-    <!-- </div> -->
-
-
-
+    <label for="rub">RUB</label>
+    <input id="rub" type="text">
+    <label for="usd">USD</label>
+    <input id="usd" type="text">
+    <script src="js/script.js"></script>
 </body>
 
 </html>
