--- a/index.html
+++ b/index.html
@@ -5,26 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Theory</title>
-    <style>
-        label {
-            display: block;
-            font-size: 30px;
-        }
-
-        input {
-            width: 300px;
-            height: 50px;
-            font-size: 30px;
-        }
-    </style>
 </head>
 
 <body>
-    <label for="rub">RUB</label>
-    <input id="rub" type="text">
-    <label for="usd">USD</label>
-    <input id="usd" type="text">
+    <div class="wrapper">
+        <form class="form-signin">
+            <h2 class="form-signin-heading">This is form</h2>
+            <input type="text" class="form-control">
+            <input id="checkbox" type="checkbox">
+            <button class="btn btn-block btn-lg btn-primary">Confirm</button>
+        </form>
+        <button id="color" class="btn btn-block btn-lg btn-primary">Change color</button>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 
