--- a/index.html
+++ b/index.html
@@ -10,14 +10,9 @@
 </head>
 
 <body>
+    <button class="btn">Animation</button>
     <div class="wrapper">
-        <form class="form-signin">
-            <h2 class="form-signin-heading">This is form</h2>
-            <input type="text" class="form-control">
-            <input id="checkbox" type="checkbox">
-            <button class="btn btn-block btn-lg btn-primary">Confirm</button>
-        </form>
-        <button id="color" class="btn btn-block btn-lg btn-primary">Change color</button>
+        <div class="box"></div>
     </div>
 
     <script src="js/script.js"></script>
