--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="box"></div>
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="js/closure-task.js"></script>
 </body>
 
 </html>
